--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         // --- MOCK DE CONFIGURACIÓN DE FIREBASE ---
         // ATENCIÓN: Esta configuración es para DEMO web.
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY", 
-            authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_PROJECT_ID.appspot.com",
-            messagingSenderId: "SENDER_ID",
-            appId: "APP_ID"
+            apiKey: "AIzaSyC_gewonkD_XnzQmwmUnQuhfzOf5zdm9lw",
+            authDomain: "calculadora-6x2.firebaseapp.com",
+            projectId: "calculadora-6x2",
+            storageBucket: "calculadora-6x2.firebasestorage.app",
+            messagingSenderId: "238926197886",
+            appId: "1:238926197886:web:d05857b007dcb305e9d42f"
         };
         const appId = 'demo-calculator-app';
         const initialAuthToken = null; 
