--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         // --- CONFIGURACIÓN DE FIREBASE (¡AJUSTAR!) ---
         // IMPORTANTE: REEMPLAZA ESTA API KEY POR LA NUEVA QUE CREASTE EN FIREBASE
         const firebaseConfig = {
-            apiKey: "AIzaSyC_gewonkD_XnzQmwmUnQuhfzOf5zdm9lw", // <-- ¡¡REEMPLAZA ESTO!!
+            apiKey: "AIzaSyC_gewonkD_XnzQmwmUnQuhfzOf5zdm9lw",
             authDomain: "calculadora-6x2.firebaseapp.com",
             projectId: "calculadora-6x2",
             storageBucket: "calculadora-6x2.firebasestorage.app",
