--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
     </div>
 
     <!-- Carga el módulo principal de la aplicación -->
-    <!-- CAMBIO CRÍTICO: Usar ruta absoluta para asegurar compatibilidad con GitHub Pages -->
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="./src/main.js"></script>
 
     <!-- CARGA DE LIBRERÍAS JSDPF Y AUTOTABLE -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
