--- a/index.html
+++ b/index.html
@@ -141,6 +141,36 @@
         </div>
     </div>
 
+    <!-- MODAL DE CONFIGURACIÓN DE PERFIL (NUEVO) -->
+    <div id="profile-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-75 flex items-center justify-center p-4 z-50 hidden" role="dialog" aria-modal="true">
+        <div class="bg-white rounded-xl shadow-2xl w-full max-w-lg p-6">
+            <h2 class="text-xl font-bold text-indigo-700 border-b pb-2 mb-4">Mi Perfil Salarial</h2>
+            
+            <form id="profile-form" class="space-y-4">
+                <div>
+                    <label for="input-category" class="block text-sm font-medium text-gray-700">Categoría Laboral</label>
+                    <input id="input-category" type="text" placeholder="Ej: Operario, Coordinador A" class="input-style mt-1" required>
+                    <p class="text-xs text-gray-500 mt-1">Este dato es solo para tu referencia y futura categorización.</p>
+                </div>
+
+                <div class="flex items-start">
+                    <input id="input-isTechnician" type="checkbox" class="h-4 w-4 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500 mt-1">
+                    <label for="input-isTechnician" class="ml-3 text-sm font-medium text-gray-700">Soy Técnico (Añadir Suma del Título)</label>
+                </div>
+                
+                <div class="flex justify-end space-x-3 pt-4 border-t mt-4">
+                    <button type="button" id="close-profile-modal-btn" class="px-4 py-2 text-sm font-semibold rounded-lg text-gray-700 border border-gray-300 hover:bg-gray-50 transition duration-150">
+                        Cancelar
+                    </button>
+                    <button type="submit" id="save-profile-btn" class="px-4 py-2 text-sm font-semibold rounded-lg text-white bg-indigo-600 hover:bg-indigo-700 transition duration-150">
+                        Guardar Perfil
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- FIN MODAL DE CONFIGURACIÓN DE PERFIL -->
+
     <!-- Carga el módulo principal de la aplicación -->
     <script type="module" src="./src/main.js"></script>
 
