--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     </div>
 
     <!-- IMPORTANTE: CARGA SOLO EL ARCHIVO PRINCIPAL DESDE LA CARPETA SRC -->
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
 
     <!-- CARGA DE LIBRERÍAS EXTERNAS (PDF) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
