--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora Salarial 6x2</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
@@ -15,6 +15,6 @@
     <div id="app-container" class="w-full max-w-5xl bg-white rounded-xl card p-6 md:p-8 mt-4">
         </div>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="./js/main.js"></script
 </body>
 </html>
