--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <div id="app-container" class="w-full max-w-5xl bg-white rounded-xl card p-6 md:p-8 mt-4">
         </div>
 
-    <script type="module" src="js/mains.js"></script
+    <script type="module" src="js/main.js"></script
 </body>
 </html>
