--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             
             <div id="summary-cards" class="grid grid-cols-2 md:grid-cols-4 gap-4 text-sm font-medium mb-6"></div>
 
+            <h3 class="text-lg font-bold text-gray-800 mb-3 border-t pt-4">Pagos Quincenales</h3>
+            <div id="quincena-summary-section" class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6"></div>
+
             <button id="generate-pdf-button" class="w-full py-2 mb-6 rounded-lg bg-red-600 hover:bg-red-700 text-white font-bold transition duration-150 flex items-center justify-center">
                 Descargar Reporte PDF
             </button>
