--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <thead class="bg-gray-100 sticky-header">
                         <tr>
                             <th class="px-3 py-2 text-left text-gray-500">Fecha</th>
-                            <th class="px-3 py-2 text-left text-gray-500">Turno</th>
+                            <th class="px-3 py-2 text-center text-gray-500">Q</th> <th class="px-3 py-2 text-left text-gray-500">Turno</th>
                             <th class="px-3 py-2 text-center text-gray-500">Es Feriado</th>
                             <th class="px-3 py-2 text-right text-gray-500">H. Eq. Base</th>
                             <th class="px-3 py-2 text-center text-gray-500">H. Extra (Reales)</th>
