--- a/index.html
+++ b/index.html
@@ -129,6 +129,16 @@
         </div>
 
     </div>
+    <section id="dashboard-section" class="mt-8 p-6 bg-white rounded-xl shadow-lg hidden">
+        <h2 class="text-2xl font-bold text-gray-800 mb-4 border-b pb-2">Dashboard Histórico</h2>
+        
+        <div id="salary-chart-container" class="mt-4">
+            <canvas id="salary-chart" style="max-height: 400px;"></canvas>
+        </div>
+    
+        <div id="historical-summary" class="mt-6 grid grid-cols-2 md:grid-cols-4 gap-4">
+            </div>
+    </section>
 
     <script type="module" src="./js/main.js"></script>
 </body>
