--- a/index.html
+++ b/index.html
@@ -141,5 +141,6 @@
     </section>
 
     <script type="module" src="./js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
 </body>
 </html>
